<resources>
    <string name="app_name">StickyNote</string>
    <string name="note_option">...</string>
    <string name="sticky_notes">Sticky Notes</string>
    <string name="date">date</string>
    <string name="note_text">Note text</string>
    <string name="search_icon">search icon</string>
    <string name="add_note">add note</string>
    <string name="no_internet">No internet</string>
    <string name="settings">Settings</string>
    <string name="close">Close</string>
    <string name="notes_list">Notes list</string>
    <string name="delete_note">Delete note</string>
    <string name="take_note">Take note..</string>
</resources>